--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,3 +5,9 @@
   apply tags,become
   when: harden_os
   tags: harden
+
+- include: docker.yml
+#  become: true
+#  apply tags,become
+#  when: harden_os
+#  tags: harden
