--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 # tasks file for setting up an assetto server on ubuntu20.04
 - include: harden.yml
-  become: true
-  apply tags,become
-  when: harden_os
-  tags: harden
+#  become: true
+#  apply tags,become
+#  when: harden_os
+#  tags: harden
 
 - include: docker.yml
 #  become: true
