still wip but hardening and docker should be working well - not sure about assetto task yet

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,3 +11,9 @@
 #  apply tags,become
 #  when: harden_os
 #  tags: harden
+
+- include: assetto.yml
+#  become: true
+#  apply tags,become
+#  when: harden_os
+#  tags: harden
