--- a/tasks/harden.yml
+++ b/tasks/harden.yml
@@ -1,6 +1,10 @@
 ---
-- include_role:
-    name: ubuntu200_cis
+
+# harden the ubuntu server via ubuntu2004_cis
+- name: 'Use ubuntu2004_cis role'
+  include_role:
+    name: ubuntu2004_cis
+
 - name: 'Include fail2ban/install using apt'
   apt: name=fail2ban state=latest update_cache=yes force_apt_get=yes
 	
