--- a/tasks/harden.yml
+++ b/tasks/harden.yml
@@ -4,6 +4,8 @@
 - name: 'Use ubuntu2004_cis role'
   include_role:
     name: ubuntu2004_cis
+  tags: harden
 
 - name: 'Include fail2ban/install using apt'
   apt: name=fail2ban state=latest update_cache=yes force_apt_get=yes
+  tags: harden
